# swarm

./: .cursorrules  .gitignore  .loop_seen  .windsurfrules  AGENTS.md  CLAUDE.md  GEMINI.md  Godding.sln  INSTALL.md  LICENSE  README.md  SWARM.md  pyproject.toml  requirements.txt  swarm.sh  swarm_loop_v7.sh
.claude/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
beliefs/: CHALLENGES.md  CONFLICTS.md  CORE.md  CROSS.md  DEPS.md  INVARIANTS.md  PHILOSOPHY-CHALLENGE-ARCHIVE.md  PHILOSOPHY.md
docs/: CASE-C-ORGANIZATIONAL-MODEL.md  COUNCIL-STRUCTURE.md  DOCS-COMPACTION-ANALYSIS-S346.md  ECOSYSTEM-EXTRACTION.md  EXPERT-ASSESSMENT-S307.md  EXPERT-POSITION-MATRIX.md  EXPERT-SWARM-STRUCTURE.md  FICTIONAL-PHILOSOPHY-RELIGION-EXPERTS.md  GENESIS-DNA.md  GENESIS.md  HOW-TO-SWARM.md  HUMAN-GUIDE.md  LEARN-AND-TEACH.md  MATH-DEPENDENCY-TREES.md  MAXIMIZE-SWARM-POTENTIAL.md  PAPER.md  QUESTIONS.md  REAL-WORLD-SWARMING.md  SCALING-TIMELINES.md  SWARM-CATEGORY-THEORY.md  SWARM-DOCS-META.md  SWARM-EXPERT-MATH.md  SWARM-FOR-HUMANS.md  SWARM-LATTICE-THEORY.md  SWARM-RATE-DISTORTION.md  SWARM-STRUCTURE.md  SWARM-THEOREM-HELPER.md  SWARM-THEOREMS.md  SWARM-VISUAL-REPRESENTABILITY.md  all.html  door.html  index.html  network.html  omega-language.md  records.html  reddit-swarm-guide.md  (+1 more)
workspace/nk-analyze/: pyproject.toml
workspace/nk-analyze/src/nk_analyze/: __init__.py  cli.py  core.py
workspace/nk-analyze/src/nk_analyze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
workspace/nk-analyze/tests/: test_analyze_path.py  test_core.py
(+4476 files in other folders)
