[project]
name = "swarm"
version = "0.1.0"
description = "Self-organizing AI session coordinator"
requires-python = ">=3.9"
dependencies = ["click>=8.0"]

[project.scripts]
swarm = "swarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swarm"]
