[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nk-analyze"
version = "0.1.0"
description = "NK landscape analysis for Python packages — measure coupling, cycles, and architectural complexity"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["complexity", "static-analysis", "coupling", "dependencies", "architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
nk-analyze = "nk_analyze.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
